--- a/src/pages/Home/SellOff/SellOff.module.scss
+++ b/src/pages/Home/SellOff/SellOff.module.scss
@@ -1,6 +1,7 @@
 @import '../../../components/GlobalStyles/GlobalStyles.scss';
 
 .content-container {
+    margin-top: 200px;
     width: var(--default-width-content);
     margin: auto;
     margin-top: 8rem;
