--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -52,6 +52,7 @@
     color: rgb(255 255 255/1);
     background-color: rgb(253 127 40/1);
     padding: 0.5rem 1.5rem;
+    margin-top: 75px;
 
     .title-btn {
         padding: 0.75rem;
